2007-03-01  Joseph Myers  <joseph@codesourcery.com>

	* as.c (parse_args): Update copyright date.

2007-02-28  Nathan Sidwell  <nathan@codesourcery.com>

	* configure.tgt (sh-*-uclinux, sh[12]-*-uclinux): Specify as elf.

2007-02-28  Nick Clifton  <nickc@redhat.com>

	PR gas/3797
	* config/tc-d10v.c (do_assemble): Do not generate error messages,
	just return -1 whenever a problem is encountered.
	(md_assemble): If do_assemble returns -1 generate a non-fatal
	error message and return.

	PR gas/2623
	* config/tc-msp430.c (line_separator_char): Change to '{'.

2007-02-27  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-m68hc11.c (fixup24): Correct fixup size.
	(build_jump_insn): Likewise.
	(build_insn): Likewise.
	(s_m68hc11_relax): Likewise.

2007-02-27  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (elf_frob_file): frag_wane any new frags.

2007-02-25  Mark Shinwell  <shinwell@codesourcery.com>

	* config/tc-arm.c (do_vfp_nsyn_pop): Use fldmias/fldmiad.

2007-02-23  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-mn10300.c (md_convert_frag): Correct fixup size.
	(md_assemble): Likewise.

2007-02-22  Alan Modra  <amodra@bigpond.net.au>

	* write.c (size_seg): Always clear SEC_RELOC here.
	(install_reloc): New function, extracted from..
	(write_relocs): ..here.  Combine RELOC_EXPANSION_POSSIBLE code
	with !RELOC_EXPANSION_POSSIBLE code.  Don't add fr_offset when
	testing frag size.  Set SEC_RELOC here.

2007-02-21  Alan Modra  <amodra@bigpond.net.au>

	PR 4082
	* config/tc-avr.h (TC_FX_SIZE_SLACK): Define.

2007-02-20  Thiemo Seufer  <ths@mips.com>

	* doc/c-mips.texi: Document 74kc, 74kf, 74kx.

2007-02-20  Thiemo Seufer  <ths@mips.com>

	* config/tc-mips.c (mips_cpu_info_table): Add 74K configurations.

2007-02-20  Thiemo Seufer  <ths@mips.com>
            Chao-Ying Fu  <fu@mips.com>

	* config/tc-mips.c (mips_set_options, mips_opts, file_ase_dspr2,
	ISA_SUPPORTS_DSPR2_ASE, MIPS_CPU_ASE_DSPR2): Add DSP R2 ASE support.
	(macro_build): Add case '2'.