@@ -1,3 +1,8 @@
+2007-03-02  Paul Brook  <paul@codesourcery.com>
+
+	* gas/arm/relax_branch_align.d: New test.
+	* gas/arm/relax_branch_align.s: New test.
+
 2007-02-28  Nick Clifton  <nickc@redhat.com>
 
 	PR gas/3797
